--- a/src/components/General.astro
+++ b/src/components/General.astro
@@ -114,9 +114,9 @@ if (validation.success) {
     
     generalName = general.name.toLocaleLowerCase().replace(/\s+/g, '_');
     
-    attack = (general.attack + (general.attack_increment as number) * 45)
-    defense = (general.defense + (general.defense_increment as number) * 45)
-    hp = (general.leadership + (general.leadership_increment as number) * 45)
+    attack = (general.attack + (general.attack_increment) * 45)
+    defense = (general.defense + (general.defense_increment) * 45)
+    hp = (general.leadership + (general.leadership_increment) * 45)
     level = (general.display === 'summary') ? (+general.level * 45) : +general.level;
     const notes = z.array(Note).safeParse(general.note);
     if (notes.success) {
@@ -149,11 +149,11 @@ if (validation.success) {
                 let valid2 = generalConflicts.safeParse(o1);
                 if (valid2.success) {
                     let data: generalConflictsType | undefined;
-                    if (valid2.data !== undefined && valid2.data.conflicts !== undefined) {
+                    if (valid2.data?.conflicts !== undefined) {
                         let conflicts = valid2.data.conflicts;
                         for (const key in conflicts) {
                             if (key.localeCompare('other')) {
-                                const items = conflicts[key as keyof typeof conflicts];
+                                const items = conflicts[key];
                                 const gc = new Set<string>;
                                 items.forEach((g) => {
                                     gc.add(g);
