--- a/src/components/general/pairing/ArcherReinPairs.astro
+++ b/src/components/general/pairing/ArcherReinPairs.astro
@@ -38,7 +38,7 @@ import { PairingPage } from "./index";
 const dataUrl = new URL("/generals/all.json", Astro.url);
 const conflictData = new URL("/generalConflictData/conflicts.json", Astro.url);
 
-let allGeneralsJson: string = "";
+let allGeneralsJson = "";
 const generalObjects: CollectionEntry<"generals">[] =
   await getCollection("generals");
 if (generalObjects !== null && generalObjects !== undefined) {
@@ -73,7 +73,7 @@ if (result.success) {
   console.error(result.error);
 }
 
-let allConflictJson: string = "";
+let allConflictJson = "";
 const collectionArray: CollectionEntry<"generalConflictData">[] =
   await getCollection("generalConflictData");
 if (collectionArray !== null && collectionArray !== undefined) {
