--- a/src/components/General.astro
+++ b/src/components/General.astro
@@ -245,7 +245,7 @@ if (validation.success) {
     }
 }
 
-
+const generalSpecialsCount = generalSpecials.length;
 ---
 
 <script>
@@ -328,36 +328,51 @@ if (validation.success) {
   {general.specialities && (
     <span class="label spectrum-Heading spectrum-Heading--sizeXS">Specialities</span>
     <div class="Specialities non-content">
-        {generalSpecials && generalSpecials.map((gs) => (
-          <div class="Speciality non-content">
-              <span class="label spectrum-Heading spectrum-Heading--sizeXXS">{gs.name}</span>
-              {Array.isArray(gs.attribute) && (
-                <div class="non-content">
+        {generalSpecials && generalSpecials.map((gs, index) => (
+            <div class={"SpecialityName" + index + " non-content"}>
+                <span class="label spectrum-Heading spectrum-Heading--sizeXXS"> 
+                    {gs.name}
+                </span>
+            </div>
+        ))}
+        {generalSpecials && generalSpecials.map((gs, index) => (
+            <div class={"Speciality" + index + " non-content"}>
+                {Array.isArray(gs.attribute) && gs.attribute.map((s) => (
+                    <div class={"non-content " + s.level} >
+                        <span class="label spectrum-Body spectrum-Body--sizeM">
+                            {s.level} Level:
+                        </span>
+                        <div class={"non-content " + s.level}  >
+                        
+                            <ul >
+                                {s.buff.map((b: BuffType) => (
+                                    <>
+                                        <li >
+                                            {b.condition ? (b.condition as string).replaceAll(/_/g, ' ') : ''} 
+                                            {b.class !== 'all' ? b.class : 'all troops '} 
+                                            {b.attribute ? b.attribute.replaceAll(/_/g, ' ') : ''} 
+                                            {(b.value && b.value.number < 0) ? '-' : '+'}{b.value!.number}{b.value!.unit ? '%' : ''}
+                                        </li>
+                                    </>
+                                ))}
+                            </ul>
+                        </div>
+                    </div>
+                 ))}
+                
+            </div>
+            /*Array.isArray(gs.attribute) && (
+                
                     {gs.attribute.map((s) => (
-                      <div class={"non-content " + s.level}  >
-                          <span class="label spectrum-Body spectrum-Body--sizeM">{s.level} Level:</span>
-                          <ul >
-                              {s.buff.map((b: BuffType) => (
-                                <>
-                                    <li >
-                                        {b.condition ? (b.condition as string).replaceAll(/_/g, ' ') : ''} 
-                                        {b.class !== 'all' ? b.class : 'all troops '} 
-                                        {b.attribute ? b.attribute.replaceAll(/_/g, ' ') : ''} 
-                                        {(b.value && b.value.number < 0) ? '-' : '+'}{b.value!.number}{b.value!.unit ? '%' : ''}
-                                    </li>
-                                </>
-                              ))}
-                          </ul>
-                      </div>
+                      
                     ))}
                 </div>
-              )}
-          </div>
+            */
         ))}
     </div>
   )}
 </div>
-<style>
+<style >
     div.GeneralDetails {
         display: flex;
         flex-direction: column;
@@ -407,9 +422,17 @@ if (validation.success) {
 
         & .Specialities {
             margin: 1px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            column-gap: 2px;
+            align-items: start;
+
+            & [class^="Speciality"] {
+                grid-column-end: span 1;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+            }
 
             & .Green {
                 background-color: var(--spectrum-celery-400);
